--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -50,7 +50,7 @@ jobs:
         # Запуск скрипта авторизации на Docker Hub
         uses: docker/login-action@v1 
         with:
-          username: dimitriuglov
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: Leo082022
       - name: Push to Docker Hub
         # Пуш образа в Docker Hub 
