--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -57,4 +57,21 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: dimitriuglov/infra_actions:v1.00.0000 
+          tags: dimitriuglov/infra_actions:v1.00.0000
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+    - name: executing remote ssh commands to deploy
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USER }}
+        key: ${{ secrets.SSH_KEY }}
+        passphrase: ${{ secrets.PASSPHRASE }}
+        script: |
+          # Выполняет pull образа с DockerHub
+          sudo docker pull dimitriuglov/infra_actions:v1.00.0000
+          #остановка всех контейнеров
+          sudo docker stop $(sudo docker ps -a -q)
+          sudo docker run --rm -d -p 5000:5000 dimitriuglov/infra_actions:v1.00.0000 
