--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -74,4 +74,14 @@ jobs:
           sudo docker pull dimitriuglov/infra_actions:v1.00.0000
           #остановка всех контейнеров
           sudo docker stop $(sudo docker ps -a -q)
-          sudo docker run --rm -d -p 5000:5000 dimitriuglov/infra_actions:v1.00.0000 
+          sudo docker run --rm -d -p 5000:5000 dimitriuglov/infra_actions:v1.00.0000
+  send_message:
+  runs-on: ubuntu-latest
+  needs: deploy
+  steps:
+  - name: send message
+    uses: appleboy/telegram-action@master
+    with:
+      to: ${{ secrets.TELEGRAM_TO }}
+      token: ${{ secrets.TELEGRAM_TOKEN }}
+      message: ${{ github.workflow }} успешно выполнен! 
